2005-04-25  Michael Natterer  <mitch@gimp.org>

	* app/app_procs.c (app_libs_init): call g_thread_init() only if
	the GThread system is not already initialized.

2005-04-25  Sven Neumann  <sven@gimp.org>

	* app/file/gimprecentlist.c (gimp_recent_list_add_item): close the
	file descriptor if we fail to obtain the lock (bug #151767).

2005-04-25  Sven Neumann  <sven@gimp.org>

	* app/plug-in/plug-in-proc-def.h: added a boolean flag to the
	ProcDef struct to identify file procedures.

	* app/xcf/xcf.c: changed accordingly.

	* app/plug-in/plug-ins.c: look at the new flag instead of checking
	extensions, prefixes and magics being non-NULL. A file plug-in
	doesn't necessarily have any of these fields set.

	* app/plug-in/plug-in-rc.c: changed pluginrc format to contain an
	extra section for file procedures. Moved all file related info there.

2005-04-25  Manish Singh  <yosh@gimp.org>

	* plug-in/common/tiff.c: Only store compression types we can actually
	handle in the save options parasite. Fixes bug #301557.

2005-04-24  Sven Neumann  <sven@gimp.org>

	* app/base/temp-buf.c (generate_unique_tmp_filename): removed the
	local pid_t variable and the msvc definition for it.

2005-04-24  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/fileops.pdb
	* app/pdb/fileops_cmds.c: spelling.

2005-04-24  Hans Breuer  <hans@breuer.org>

	* menus/makefile.msc : build menus with nmake, too
	* menus/Makefile.am : added to EXTRA_DIST

	* **/makefile.msc app/gimpcore.def : updated

	* app/base/temp-buf.c : there is no pid_t with msvc so typedef one

2005-04-23  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpdrawablepreview.c (gimp_drawable_preview_draw_thumb):
	respect the selection (fixes bug #301523).

2005-04-23  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/metadata/xmp-schemas.[ch]: Added definition of
	properties from IPTC Core XMP schema (Iptc4xmpCore).

	* plug-ins/metadata/base64.[ch]: Added option to ignore invalid
	characters in base64 encoded text.
