@@ -49,7 +49,7 @@ static void        run                    (const gchar       *name,
                                            gint              *nreturn_vals,
                                            GimpParam        **return_vals);
 
-static void inline color_to_alpha         (GimpRGB           *src,
+inline static void color_to_alpha         (GimpRGB           *src,
                                            const GimpRGB     *color);
 static void        to_alpha_func          (const guchar      *src,
                                            guchar            *dest,
@@ -200,7 +200,7 @@ run (const gchar      *name,
   values[0].data.d_status = status;
 }
 
-static inline void
+inline static void
 color_to_alpha (GimpRGB       *src,
                 const GimpRGB *color)
 {
@@ -412,6 +412,7 @@ color_to_alpha_dialog (GimpDrawable *drawable)
                                   PRV_WIDTH, PRV_HEIGHT,
                                   &pvals.color,
                                   GIMP_COLOR_AREA_FLAT);
+  gimp_color_button_set_update (GIMP_COLOR_BUTTON (button), TRUE);
   gtk_box_pack_start (GTK_BOX (hbox), button, TRUE, TRUE, 0);
   gtk_widget_show (button);
 
